--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">News Demo App</string>
+    <string name="item_title">Title of the News Article.</string>
+    <string name="item_description">Description of the News Item.</string>
+    <string name="image_description">An image of the News Item Header.</string>
 </resources>
