Resized the Cover Image.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="item_title">Title of the News Article.</string>
     <string name="item_description">Description of the News Item.</string>
     <string name="image_description">An image of the News Item Header.</string>
+    <string name="title">China\'s exports, imports fell in March but not as much as expected - CNBC</string>
+    <string name="description">China reported that its dollar-denominated exports and imports fell from a year ago in March, but they were better than what economists had expected.</string>
 </resources>
