--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="favourite_icon_description">Show favourite Articles</string>
     <string name="more_icon">More</string>
     <string name="more_icon_description">More Options</string>
+    <string name="about">About</string>
+    <string name="country">Country</string>
+    <string name="news_source">News Source</string>
 </resources>
