Changed Moshi Adapter to use Kotlin Codegen.
KotlinReflectionAdapter is huge 2.5MiB, it's better to use custom Adapter for performance.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="country">Country</string>
     <string name="news_source">News Source</string>
     <string name="delete_all">Delete All</string>
+    <string name="refresh">Refresh</string>
 </resources>
